added age/survival histogram

--- a/titanic_survival.ipynb
+++ b/titanic_survival.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "<h1 style = \"padding: 20px; text-align: center;\">Exploring the Titanic Survival Dataset.</h1>\n",
     "\n",
-    "We'll start off by loading the required libraries for the project."
+    "We'll start off by loading the required base libraries for the project. These are the only ones we need to manipulate and visualize our data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -468,7 +468,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -549,10 +549,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>Asplund, Mrs. Carl Oscar (Selma Augusta Emilia...</td>\n",
+       "      <td>Beesley, Mr. Lawrence</td>\n",
        "      <td>male</td>\n",
        "      <td>CA. 2343</td>\n",
-       "      <td>G6</td>\n",
+       "      <td>B96 B98</td>\n",
        "      <td>S</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -568,20 +568,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                     Name   Sex    Ticket  \\\n",
-       "count                                                 891   891       891   \n",
-       "unique                                                891     2       681   \n",
-       "top     Asplund, Mrs. Carl Oscar (Selma Augusta Emilia...  male  CA. 2343   \n",
-       "freq                                                    1   577         7   \n",
-       "\n",
-       "       Cabin Embarked  \n",
-       "count    204      889  \n",
-       "unique   147        3  \n",
-       "top       G6        S  \n",
-       "freq       4      644  "
+       "                         Name   Sex    Ticket    Cabin Embarked\n",
+       "count                     891   891       891      204      889\n",
+       "unique                    891     2       681      147        3\n",
+       "top     Beesley, Mr. Lawrence  male  CA. 2343  B96 B98        S\n",
+       "freq                        1   577         7        4      644"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -798,10 +792,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1b83527fc48>"
+       "<seaborn.axisgrid.FacetGrid at 0x22cc2b25988>"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
